--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
               <a href="https://atomicobject.com" target="_blank">
                 <img src="./site-assets/AO_logo.png" alt="Atomic Object" width="280px" height="280px"/>
               </a>
-
-              <img src="./site-assets/MSU_logo.png" width="267px" height="150px"/>
-
+              <a aria-label="Michigan State University" class="global-header__logo" href="/"><svg class="icon icon-logo"><use xlink:href="#icon-logo" xmlns:xlink="http://www.w3.org/1999/xlink"></use></svg>
+                <span class="show-for-sr">Michigan State University</span></a>
             </section>
             <p>&nbsp;</p>
             <a class="btn btn-primary page-scroll" href="#about">Click To Scroll Down!</a>
