--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
               <a href="https://atomicobject.com" target="_blank">
                 <img src="./site-assets/AO_logo.png" alt="Atomic Object" width="280px" height="280px"/>
               </a>
-              <a aria-label="Michigan State University" class="global-header__logo" href="/"><svg class="icon icon-logo"><use xlink:href="#icon-logo" xmlns:xlink="http://www.w3.org/1999/xlink"></use></svg>
-                <span class="show-for-sr">Michigan State University</span></a>
+              <a href="https://msu.edu" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/53/Michigan_State_University_seal.svg/1200px-Michigan_State_University_seal.svg.png" alt="MSU" width="280px" height="280px"/>
+              </a>
             </section>
             <p>&nbsp;</p>
             <a class="btn btn-primary page-scroll" href="#about">Click To Scroll Down!</a>
